--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
             - ./src:/app
         tty: true
         restart: always
+        environment:
+            PYTHONIOENCODING: utf-8
